css: input visibility fixed

--- a/app/scss/base/_global.scss
+++ b/app/scss/base/_global.scss
@@ -55,5 +55,6 @@ main {
 .invisible {
   width: 0px;
   position: absolute;
-  opacity: hidden;
+  opacity: 0;
+  appearance: none;
 }
